Fix clock fonts.
(cherry picked from commit 8153cf5c3dbd1eaf94b17eab367d77d2e265e6f3)

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -51,10 +51,13 @@
   integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
   integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-<link href="http://fonts.cdnfonts.com/css/frutiger" rel="stylesheet">
 <script>
   // Init tooltips
   $("[data-toggle=tooltip").tooltip();
 </script>
+
+<!-- Font for clock -->
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
 
 </html>
